# boids

./: .pre-commit-config.yaml  Boids Pseudocode.html  Cargo.toml  README.md  config.toml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
Boids Pseudocode_files/: global.css
docs/: Boids Pseudocode.html
docs/Boids Pseudocode_files/: global.css
src/: app.rs  boid.rs  config.rs  database.rs  handler.rs  lib.rs  main.py  main.rs  parameters.rs  py.rs  simulation.rs  simulation_parameters.toml
src/boids/: __init__.py  gui.py  program.py
src/boids/graphic/: sky.py
src/model/: boid.rs  distance.rs  mod.rs  pos.rs  velocity.rs
src/model/boids/: mod.rs  simple.rs
src/movement/: mod.rs  velocity_calculator.rs
src/simulation/: __init__.py  boid.rs  database.rs  force_calculator.rs  lib.rs  parameters.rs  program.py  simulation.rs  two_d.rs  velocity_calculator.rs  velocity_calculator_builder.rs
src/simulation/force_calculators/: avoid_collision.rs  calculator.rs  flock_to_centre.rs  match_velocity.rs  mod.rs
src/simulation/model/: boid.rs  position.rs  velocity.rs
src/simulation/newtonian/: acceleration.rs  distance.rs  force.rs  mass.rs  mod.rs  position.rs  units.rs  vector.rs  velocity.rs
src/simulation/velocity_calculators/: avoid_collision.rs  calculator.rs  flock_to_centre.rs  match_velocity.rs
