[package]
name = "boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simulation"
path = "src/simulation/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
